adds jfrog configs in build.sbt